--- a/front/package.json
+++ b/front/package.json
@@ -14,7 +14,7 @@
     "plugin"
   ],
   "author": "Jesús Espino <jesus.espino@kaleidos.net>",
-  "license": "AGPL-3.0",
+  "license": "MIT-0",
   "bugs": {
     "url": "https://github.com/taigaio/taiga-contrib-gitlab-auth/issues"
   },
