--- a/front/package.json
+++ b/front/package.json
@@ -1,6 +1,6 @@
 {
   "name": "taiga-contrib-gitlab-auth",
-  "version": "6.5.0",
+  "version": "6.5.2",
   "description": "Taiga contrib plugin for gitlab authentication",
   "main": "index.js",
   "repository": {
@@ -24,16 +24,16 @@
     "jade": "^1.9.1"
   },
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-angular-templatecache": "^1.8.0",
-    "gulp-cached": "^1.1.0",
-    "gulp-coffee": "^2.3.1",
-    "gulp-concat": "^2.6.0",
+    "gulp": "^4.0.2",
+    "gulp-angular-templatecache": "^3.0.0",
+    "gulp-cached": "1.1.1",
+    "gulp-coffee": "^2.3.5",
+    "gulp-concat": "^2.6.1",
     "gulp-jade": "^1.1.0",
     "gulp-load-plugins": "^1.2.0",
-    "gulp-plumber": "^1.0.1",
+    "gulp-plumber": "^1.2.1",
     "gulp-remember": "^0.3.0",
-    "gulp-uglify": "^1.5.2",
+    "gulp-uglify": "~3.0.2",
     "merge-stream": "^1.0.0"
   }
 }
